@@ -14,7 +14,6 @@ import Operaciones.traspasoEntrada.model.traspasoEntrada;
 import javafx.animation.PauseTransition;
 import javafx.application.Platform;
 import javafx.beans.property.SimpleBooleanProperty;
-import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.concurrent.Task;
@@ -33,17 +32,20 @@ import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.*;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
-import javafx.util.Callback;
 import javafx.util.Duration;
 
 import java.io.IOException;
 import java.util.*;
 import java.util.concurrent.*;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
 public class MainController {
 
+    // =========================
+    // FXML
+    // =========================
     @FXML private TableColumn<traspasoEntrada, Void> colDesplegar;
     @FXML private ComboBox<String> miComboBox;
     @FXML private CheckBox miCheckBox;
@@ -68,6 +70,9 @@ public class MainController {
 
     @FXML private encabezadoController paneNavbarController;
 
+    // =========================
+    // Estado / datos
+    // =========================
     private String criterioOrden = "id";
     private String direccionOrden = "asc";
 
@@ -79,16 +84,23 @@ public class MainController {
     private Image flechaDerechaImage;
     private Image flechaAbajoImage;
 
+    private static final String SUF_DETALLE  = "_DETALLE_";
+    private static final String SUF_HEADER   = "_ENCABEZADO_";
+    private static final String SUF_CARGANDO = "_CARGANDO_";
+
+    private static final String STYLE_CENTER = "-fx-alignment: CENTER;";
+    private static final String STYLE_HEADER = "-fx-background-color: #6A6767; -fx-text-fill: white; -fx-alignment: CENTER; -fx-font-weight: bold;";
+    private static final String BORDE_COLOR  = "#4A4848";
+
+    private enum RowKind { NORMAL, DETALLE, HEADER, CARGANDO }
+
     // Estado desplegado
     private final Map<String, Boolean> filasDesplegadas = new ConcurrentHashMap<>();
-
-    // Cache de detalles por entrada (para que al expandir sea inmediato)
+    // Cache de detalles por entrada
     private final Map<String, List<traspasoEntrada>> detallesPorEntrada = new ConcurrentHashMap<>();
-
     // Cargas detalle en progreso
     private final Map<String, Task<List<traspasoEntrada>>> cargasDetalle = new ConcurrentHashMap<>();
-
-    // Pre-carga (opcional)
+    // Pre-carga
     private Task<Void> precargaDetallesTask;
 
     // Cache de nombres de producto (evita consultas en UI)
@@ -96,31 +108,36 @@ public class MainController {
     private final Map<String, Task<String>> cargasNombreProducto = new ConcurrentHashMap<>();
 
     private OverlayCarga overlayCarga;
+
     private boolean actualizandoEntrada = false;
     private List<traspasoEntrada> pendientesEnEspera;
     private String estadoEntradaEnEspera;
     private String estadoArticulosEnEspera;
 
-    // Ejecutores: uno para interacción (expandir/cargar tabla), otro para precarga/nombres
+    // Para mantener conteo y titulo correcto al continuar
+    private List<String> clavesEnProceso = Collections.emptyList();
+
+    // Ejecutores
     private final ExecutorService fxExecutor = Executors.newFixedThreadPool(
             Math.max(2, Runtime.getRuntime().availableProcessors() / 2),
             daemonFactory("fx-bg")
     );
+    private final ExecutorService prefetchExecutor = Executors.newFixedThreadPool(2, daemonFactory("fx-prefetch"));
 
-    private final ExecutorService prefetchExecutor = Executors.newFixedThreadPool(
-            2,
-            daemonFactory("fx-prefetch")
-    );
-
-    private static ThreadFactory daemonFactory(String prefix) {
-        return r -> {
-            Thread t = new Thread(r);
-            t.setDaemon(true);
-            t.setName(prefix + "-" + t.getId());
-            return t;
+    private static ThreadFactory daemonFactory(final String prefix) {
+        return new ThreadFactory() {
+            @Override public Thread newThread(Runnable r) {
+                Thread t = new Thread(r);
+                t.setDaemon(true);
+                t.setName(prefix + "-" + t.getId());
+                return t;
+            }
         };
     }
 
+    // =========================
+    // Init
+    // =========================
     @FXML
     public void initialize() {
         miComboBox.setItems(FXCollections.observableArrayList("Aceptar", "Rechazar"));
@@ -128,119 +145,65 @@ public class MainController {
 
         cargarImagenesFlecha();
 
-        Platform.runLater(() -> {
-            try {
-                FXMLLoader loader = new FXMLLoader(getClass().getResource("/Compartido/view/navbar.fxml"));
-                VBox navbarLoaded = loader.load();
-                navbarController navbarCtrl = loader.getController();
-                navbarCtrl.setOverlayPane(overlayPane);
-                navbar.getChildren().setAll(navbarLoaded);
-            } catch (IOException e) {
-                e.printStackTrace();
+        Platform.runLater(new Runnable() {
+            @Override public void run() {
+                cargarNavbar();
+                bindLayout();
+                paneNavbarController.setTitulo("Traspaso de Entrada", "#ffffff");
+
+                overlayCarga = new OverlayCarga(root, overlayPane);
+
+                configurarTabla();
+                cargarTablaAsincrona();
+
+                RefrescoHelper.setVistaActual("traspasoEntrada");
+                RefrescoHelper.registrarRefresco("traspasoEntrada", new Runnable() {
+                    @Override public void run() { actualizarTraspasoEntrada(); }
+                });
             }
-
-            SplitPane.setResizableWithParent(navbar, false);
-            SplitPane.setResizableWithParent(contenedor, true);
-
-            paneNavbar.prefHeightProperty().bind(root.heightProperty().multiply(0.1));
-            paneNavbar.prefWidthProperty().bind(root.widthProperty().multiply(0.9));
-
-            navbar.prefWidthProperty().bind(root.widthProperty().multiply(0.15));
-            navbar.prefHeightProperty().bind(root.heightProperty().multiply(0.9));
-
-            contenedor.prefHeightProperty().bind(root.heightProperty().multiply(0.75));
-
-            HBox.setHgrow(expansor, Priority.ALWAYS);
-            expansor.setMinWidth(10);
-            lblOrdenar.setMinWidth(Region.USE_PREF_SIZE);
-
-            contenedorTabla.prefHeightProperty().bind(contenedor.heightProperty().multiply(0.95));
-            contenidoTabla.prefHeightProperty().bind(contenedorTabla.heightProperty().multiply(0.9));
-
-            paneNavbarController.setTitulo("Traspaso de Entrada", "#ffffff");
-
-            overlayCarga = new OverlayCarga(root, overlayPane);
-
-            configurarTabla();
-            cargarTabla(); // async
-            RefrescoHelper.setVistaActual("traspasoEntrada");
-            RefrescoHelper.registrarRefresco("traspasoEntrada", this::actualizarTraspasoEntrada);
         });
     }
 
+    private void cargarNavbar() {
+        try {
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("/Compartido/view/navbar.fxml"));
+            VBox navbarLoaded = loader.load();
+            navbarController navbarCtrl = loader.getController();
+            navbarCtrl.setOverlayPane(overlayPane);
+            navbar.getChildren().setAll(navbarLoaded);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void bindLayout() {
+        SplitPane.setResizableWithParent(navbar, false);
+        SplitPane.setResizableWithParent(contenedor, true);
+
+        paneNavbar.prefHeightProperty().bind(root.heightProperty().multiply(0.1));
+        paneNavbar.prefWidthProperty().bind(root.widthProperty().multiply(0.9));
+
+        navbar.prefWidthProperty().bind(root.widthProperty().multiply(0.15));
+        navbar.prefHeightProperty().bind(root.heightProperty().multiply(0.9));
+
+        contenedor.prefHeightProperty().bind(root.heightProperty().multiply(0.75));
+
+        HBox.setHgrow(expansor, Priority.ALWAYS);
+        expansor.setMinWidth(10);
+        lblOrdenar.setMinWidth(Region.USE_PREF_SIZE);
+
+        contenedorTabla.prefHeightProperty().bind(contenedor.heightProperty().multiply(0.95));
+        contenidoTabla.prefHeightProperty().bind(contenedorTabla.heightProperty().multiply(0.9));
+    }
+
     // =========================
-    // Refresco / carga principal
+    // Async helper
     // =========================
-
-    private void actualizarTraspasoEntrada() {
-        Platform.runLater(() -> {
-            contenidoTabla.getSelectionModel().clearSelection();
-            if (miCheckBox != null) miCheckBox.setSelected(false);
-            if (miComboBox != null) miComboBox.setValue("Opciones");
-
-            // Cancelar tasks en progreso
-            if (precargaDetallesTask != null) precargaDetallesTask.cancel();
-            cargasDetalle.values().forEach(Task::cancel);
-            cargasDetalle.clear();
-
-            cargasNombreProducto.values().forEach(Task::cancel);
-            cargasNombreProducto.clear();
-
-            filasDesplegadas.clear();
-            detallesPorEntrada.clear();
-            nombreProductoCache.clear();
-
-            entradasTraspasoOriginal.clear();
-            entradasTraspaso.clear();
-            contenidoTabla.refresh();
-        });
-
-        cargarTablaAsincrona();
-    }
-
-    private void cargarTabla() {
-        cargarTablaAsincrona();
-    }
-
-    private void cargarTablaAsincrona() {
-        runAsync(
-                () -> modeloTraspaso.obtenerPendientes(),
-                datos -> {
-                    entradasTraspasoOriginal.setAll(datos);
-
-                    filasDesplegadas.clear();
-                    detallesPorEntrada.clear();
-
-                    // Cancelar cargas anteriores (si existían)
-                    cargasDetalle.values().forEach(Task::cancel);
-                    cargasDetalle.clear();
-
-                    if (!datos.isEmpty()) {
-                        aplicarOrdenamiento();
-                    } else {
-                        entradasTraspaso.clear();
-                        contenidoTabla.refresh();
-                    }
-
-                    // Opcional: precarga para que expandir sea instantáneo
-                    iniciarPrecargaDetalles(datos);
-                },
-                ex -> {
-                    ex.printStackTrace();
-                    mostrarAlerta(Alert.AlertType.ERROR, "Error",
-                            "No se pudieron cargar los traspasos: " + ex.getMessage());
-                }
-        );
-    }
-
-    private <T> void runAsync(Callable<T> background,
-                              Consumer<T> onSuccessFxThread,
-                              Consumer<Throwable> onErrorFxThread) {
-        Task<T> task = new Task<>() {
-            @Override
-            protected T call() throws Exception {
-                return background.call();
-            }
+    private <T> void runAsync(final Callable<T> background,
+                              final Consumer<T> onSuccessFxThread,
+                              final Consumer<Throwable> onErrorFxThread) {
+        Task<T> task = new Task<T>() {
+            @Override protected T call() throws Exception { return background.call(); }
         };
         task.setOnSucceeded(e -> onSuccessFxThread.accept(task.getValue()));
         task.setOnFailed(e -> onErrorFxThread.accept(task.getException()));
@@ -248,15 +211,100 @@ public class MainController {
     }
 
     // =========================
+    // Refresco / carga principal
+    // =========================
+    private void actualizarTraspasoEntrada() {
+        Platform.runLater(new Runnable() {
+            @Override public void run() {
+                contenidoTabla.getSelectionModel().clearSelection();
+                if (miCheckBox != null) miCheckBox.setSelected(false);
+                if (miComboBox != null) miComboBox.setValue("Opciones");
+                cancelarProcesosEnCurso();
+                limpiarCachesYTablas();
+            }
+        });
+        cargarTablaAsincrona();
+    }
+
+    private void cancelarProcesosEnCurso() {
+        if (precargaDetallesTask != null) precargaDetallesTask.cancel();
+        for (Task<List<traspasoEntrada>> t : cargasDetalle.values()) t.cancel();
+        cargasDetalle.clear();
+
+        for (Task<String> t : cargasNombreProducto.values()) t.cancel();
+        cargasNombreProducto.clear();
+    }
+
+    private void limpiarCachesYTablas() {
+        filasDesplegadas.clear();
+        detallesPorEntrada.clear();
+        nombreProductoCache.clear();
+
+        entradasTraspasoOriginal.clear();
+        entradasTraspaso.clear();
+        contenidoTabla.refresh();
+    }
+
+    private void cargarTablaAsincrona() {
+        runAsync(
+                new Callable<List<traspasoEntrada>>() {
+                    @Override public List<traspasoEntrada> call() { return modeloTraspaso.obtenerPendientes(); }
+                },
+                new Consumer<List<traspasoEntrada>>() {
+                    @Override public void accept(List<traspasoEntrada> datos) {
+                        entradasTraspasoOriginal.setAll(datos);
+
+                        filasDesplegadas.clear();
+                        detallesPorEntrada.clear();
+
+                        for (Task<List<traspasoEntrada>> t : cargasDetalle.values()) t.cancel();
+                        cargasDetalle.clear();
+
+                        if (datos == null || datos.isEmpty()) {
+                            entradasTraspaso.clear();
+                            contenidoTabla.refresh();
+                            return;
+                        }
+
+                        aplicarOrdenamiento();
+                        iniciarPrecargaDetalles(datos);
+                    }
+                },
+                new Consumer<Throwable>() {
+                    @Override public void accept(Throwable ex) {
+                        ex.printStackTrace();
+                        mostrarAlerta(Alert.AlertType.ERROR, "Error", "No se pudieron cargar los traspasos: " + ex.getMessage());
+                    }
+                }
+        );
+    }
+
+    // =========================
+    // Row helpers
+    // =========================
+    private static String s(String v) { return v == null ? "" : v; }
+
+    private RowKind kind(traspasoEntrada e) {
+        String k = (e == null) ? null : e.getClaveEntrada();
+        if (k == null) return RowKind.NORMAL;
+        if (k.contains(SUF_CARGANDO)) return RowKind.CARGANDO;
+        if (k.contains(SUF_HEADER)) return RowKind.HEADER;
+        if (k.contains(SUF_DETALLE)) return RowKind.DETALLE;
+        return RowKind.NORMAL;
+    }
+
+    private boolean isNormalRow(traspasoEntrada e) { return kind(e) == RowKind.NORMAL; }
+
+    // =========================
     // Expansión rápida de detalles
     // =========================
-
     private void toggleFilaDesplegada(String claveEntrada) {
-        boolean estaDesplegada = filasDesplegadas.getOrDefault(claveEntrada, false);
+        if (claveEntrada == null || claveEntrada.trim().isEmpty()) return;
 
-        if (estaDesplegada) {
-            // Colapsar
-            filasDesplegadas.put(claveEntrada, false);
+        boolean desplegada = filasDesplegadas.getOrDefault(claveEntrada, false);
+        filasDesplegadas.put(claveEntrada, !desplegada);
+
+        if (desplegada) {
             cancelarCargaDetalle(claveEntrada);
             contraerFila(claveEntrada);
             removerFilaCargando(claveEntrada);
@@ -264,57 +312,47 @@ public class MainController {
             return;
         }
 
-        // Expandir
-        filasDesplegadas.put(claveEntrada, true);
-
-        List<traspasoEntrada> filasDetalleCache = detallesPorEntrada.get(claveEntrada);
-        if (filasDetalleCache != null && !filasDetalleCache.isEmpty()) {
-            insertarDetallesEnTabla(claveEntrada, filasDetalleCache);
+        List<traspasoEntrada> cache = detallesPorEntrada.get(claveEntrada);
+        if (cache != null && !cache.isEmpty()) {
+            insertarDetallesEnTabla(claveEntrada, cache);
             contenidoTabla.refresh();
             return;
         }
 
-        // Mostrar “Cargando…” inmediato para que se sienta rápido
         insertarFilaCargando(claveEntrada);
         contenidoTabla.refresh();
-
-        // Cargar detalles en background
         cargarDetallesEnSegundoPlano(claveEntrada);
     }
 
     private void cancelarCargaDetalle(String claveEntrada) {
-        Task<List<traspasoEntrada>> task = cargasDetalle.remove(claveEntrada);
-        if (task != null) task.cancel();
+        Task<List<traspasoEntrada>> t = cargasDetalle.remove(claveEntrada);
+        if (t != null) t.cancel();
     }
 
-    private void cargarDetallesEnSegundoPlano(String claveEntrada) {
+    private void cargarDetallesEnSegundoPlano(final String claveEntrada) {
         if (cargasDetalle.containsKey(claveEntrada)) return;
 
-        Task<List<traspasoEntrada>> task = new Task<>() {
-            @Override
-            protected List<traspasoEntrada> call() {
+        final Task<List<traspasoEntrada>> task = new Task<List<traspasoEntrada>>() {
+            @Override protected List<traspasoEntrada> call() {
                 List<model.DetalleEntrada> detalles = modeloTraspaso.obtenerDetallesEntrada(claveEntrada);
                 return construirFilasDetalle(claveEntrada, detalles);
             }
         };
 
-        task.setOnSucceeded(event -> {
+        task.setOnSucceeded(e -> {
             List<traspasoEntrada> filasDetalle = task.getValue();
             cargasDetalle.remove(claveEntrada);
 
-            detallesPorEntrada.put(claveEntrada, filasDetalle);
+            if (filasDetalle != null) detallesPorEntrada.put(claveEntrada, filasDetalle);
 
-            // Quitar “Cargando…”
             removerFilaCargando(claveEntrada);
-
-            // Si todavía está desplegada, insertar
             if (filasDesplegadas.getOrDefault(claveEntrada, false) && filasDetalle != null && !filasDetalle.isEmpty()) {
                 insertarDetallesEnTabla(claveEntrada, filasDetalle);
             }
             contenidoTabla.refresh();
         });
 
-        task.setOnFailed(event -> {
+        task.setOnFailed(e -> {
             cargasDetalle.remove(claveEntrada);
             removerFilaCargando(claveEntrada);
             contenidoTabla.refresh();
@@ -327,23 +365,17 @@ public class MainController {
     private void insertarFilaCargando(String claveEntrada) {
         removerFilaCargando(claveEntrada);
 
-        traspasoEntrada loading = new traspasoEntrada(
-                "",            // claveEntrada visible (no se usa)
-                "Cargando...",  // fecha (se usa en detalle como id, aquí solo texto)
-                "", "", ""
-        );
-        loading.setClaveEntrada(claveEntrada + "_CARGANDO_1");
+        traspasoEntrada loading = new traspasoEntrada("", "Cargando...", "", "", "");
+        loading.setClaveEntrada(claveEntrada + SUF_CARGANDO + "1");
         loading.setSeleccionado(false);
 
-        int index = indiceEntradaPadre(claveEntrada);
-        if (index >= 0) {
-            entradasTraspaso.add(index + 1, loading);
-        }
+        int idx = indiceEntradaPadre(claveEntrada);
+        if (idx >= 0) entradasTraspaso.add(idx + 1, loading);
     }
 
     private void removerFilaCargando(String claveEntrada) {
-        entradasTraspaso.removeIf(e -> e != null && e.getClaveEntrada() != null
-                && e.getClaveEntrada().startsWith(claveEntrada + "_CARGANDO_"));
+        final String prefix = claveEntrada + SUF_CARGANDO;
+        entradasTraspaso.removeIf(e -> e != null && s(e.getClaveEntrada()).startsWith(prefix));
     }
 
     private int indiceEntradaPadre(String claveEntrada) {
@@ -356,84 +388,65 @@ public class MainController {
 
     private void contraerFila(String claveEntrada) {
         List<traspasoEntrada> filasDetalle = detallesPorEntrada.get(claveEntrada);
-        if (filasDetalle != null && !filasDetalle.isEmpty()) {
-            entradasTraspaso.removeAll(filasDetalle);
-        }
+        if (filasDetalle != null && !filasDetalle.isEmpty()) entradasTraspaso.removeAll(filasDetalle);
     }
 
     private void insertarDetallesEnTabla(String claveEntrada, List<traspasoEntrada> filasDetalle) {
-        // Evitar doble inserción si por alguna razón ya estaban
-        entradasTraspaso.removeAll(filasDetalle);
-
-        int index = indiceEntradaPadre(claveEntrada);
-        if (index >= 0) {
-            entradasTraspaso.addAll(index + 1, filasDetalle);
-        }
+        entradasTraspaso.removeAll(filasDetalle); // evita doble inserción
+        int idx = indiceEntradaPadre(claveEntrada);
+        if (idx >= 0) entradasTraspaso.addAll(idx + 1, filasDetalle);
     }
 
     private List<traspasoEntrada> construirFilasDetalle(String claveEntrada, List<model.DetalleEntrada> detalles) {
-        List<traspasoEntrada> filasDetalle = new ArrayList<>();
-        if (detalles == null || detalles.isEmpty()) return filasDetalle;
+        if (detalles == null || detalles.isEmpty()) return Collections.emptyList();
 
-        // Encabezado detalle
-        traspasoEntrada encabezadoDetalle = new traspasoEntrada(
-                "Id",
-                "Producto",
-                "Cantidad",
-                "Precio Unitario",
-                "Precio Total"
-        );
-        encabezadoDetalle.setClaveEntrada(claveEntrada + "_ENCABEZADO_1");
-        encabezadoDetalle.setSeleccionado(false);
-        filasDetalle.add(encabezadoDetalle);
+        List<traspasoEntrada> filas = new ArrayList<>(detalles.size() + 1);
 
-        int contador = 1;
-        for (model.DetalleEntrada detalle : detalles) {
-            String identificadorInterno = claveEntrada + "_DETALLE_" + (contador++);
-            traspasoEntrada filaDetalle = new traspasoEntrada(
-                    identificadorInterno,                 // claveEntrada interno
-                    detalle.getClaveProducto(),           // fecha => ID Producto
-                    detalle.getCantidad(),                // hora  => Cantidad
-                    detalle.getPrecioUnitario(),          // total => Precio Unitario
-                    detalle.getPrecioTotal()              // nombreSucursal => Precio Total (reutilizado)
+        traspasoEntrada header = new traspasoEntrada("Id", "Producto", "Cantidad", "Precio Unitario", "Precio Total");
+        header.setClaveEntrada(claveEntrada + SUF_HEADER + "1");
+        header.setSeleccionado(false);
+        filas.add(header);
+
+        int n = 1;
+        for (model.DetalleEntrada d : detalles) {
+            String idInterno = claveEntrada + SUF_DETALLE + (n++);
+            traspasoEntrada fila = new traspasoEntrada(
+                    idInterno,            // claveEntrada interno
+                    d.getClaveProducto(), // fecha => ID Producto
+                    d.getCantidad(),      // hora  => Cantidad
+                    d.getPrecioUnitario(),// total => Precio Unitario
+                    d.getPrecioTotal()    // nombreSucursal => Precio Total
             );
-            filaDetalle.setSeleccionado(false);
-            filasDetalle.add(filaDetalle);
+            fila.setSeleccionado(false);
+            filas.add(fila);
 
-            // Opcional: dispara carga del nombre del producto (sin bloquear)
-            precargarNombreProducto(detalle.getClaveProducto());
+            precargarNombreProducto(d.getClaveProducto());
         }
-
-        return filasDetalle;
+        return filas;
     }
 
     // =========================
-    // Cache de nombres (sin freeze)
+    // Cache nombres de producto (sin freeze)
     // =========================
-
-    private void precargarNombreProducto(String idProducto) {
-        if (idProducto == null || idProducto.isBlank()) return;
-        if (nombreProductoCache.containsKey(idProducto)) return;
+    private void precargarNombreProducto(final String idProducto) {
+        if (idProducto == null || idProducto.trim().isEmpty() || nombreProductoCache.containsKey(idProducto)) return;
 
         cargasNombreProducto.computeIfAbsent(idProducto, key -> {
-            Task<String> t = new Task<>() {
-                @Override
-                protected String call() {
-                    return modeloTraspaso.obtenerNombreProducto(key);
-                }
+            final Task<String> t = new Task<String>() {
+                @Override protected String call() { return modeloTraspaso.obtenerNombreProducto(key); }
             };
 
             t.setOnSucceeded(e -> {
-                nombreProductoCache.put(key, t.getValue());
+                String v = s(t.getValue());
+                nombreProductoCache.put(key, v.isEmpty() ? key : v);
                 cargasNombreProducto.remove(key);
-                contenidoTabla.refresh();
+                Platform.runLater(() -> contenidoTabla.refresh());
             });
 
             t.setOnFailed(e -> {
-                // Para no reintentar infinito, guardamos algo (o el mismo id)
                 nombreProductoCache.putIfAbsent(key, key);
                 cargasNombreProducto.remove(key);
-                contenidoTabla.refresh();
+                Platform.runLater(() -> contenidoTabla.refresh());
             });
 
             prefetchExecutor.execute(t);
@@ -442,39 +455,26 @@ public class MainController {
     }
 
     // =========================
-    // Precarga de detalles (mejora expansión)
+    // Precarga de detalles (expansión instantánea)
     // =========================
-
-    private void iniciarPrecargaDetalles(List<traspasoEntrada> entradas) {
+    private void iniciarPrecargaDetalles(final List<traspasoEntrada> entradas) {
         if (entradas == null || entradas.isEmpty()) return;
         if (precargaDetallesTask != null && precargaDetallesTask.isRunning()) return;
 
-        precargaDetallesTask = new Task<>() {
-            @Override
-            protected Void call() {
-                int total = entradas.size();
-
-                // Si tienes demasiadas filas y no quieres precargar todas, limita aquí:
-                // int limite = Math.min(total, 80);
-                int limite = total;
-
-                for (int i = 0; i < limite; i++) {
+        precargaDetallesTask = new Task<Void>() {
+            @Override protected Void call() {
+                for (traspasoEntrada entrada : entradas) {
                     if (isCancelled()) break;
-
-                    traspasoEntrada entrada = entradas.get(i);
                     if (entrada == null) continue;
-                    String clave = entrada.getClaveEntrada();
-                    if (clave == null || clave.isBlank()) continue;
 
-                    if (detallesPorEntrada.containsKey(clave)) continue;
-                    if (cargasDetalle.containsKey(clave)) continue;
+                    String clave = entrada.getClaveEntrada();
+                    if (clave == null || clave.trim().isEmpty()) continue;
+                    if (detallesPorEntrada.containsKey(clave) || cargasDetalle.containsKey(clave)) continue;
 
                     try {
-                        List<model.DetalleEntrada> detalles = modeloTraspaso.obtenerDetallesEntrada(clave);
-                        List<traspasoEntrada> filas = construirFilasDetalle(clave, detalles);
-                        detallesPorEntrada.put(clave, filas);
-                    } catch (Exception ignored) {
-                    }
+                        List<model.DetalleEntrada> det = modeloTraspaso.obtenerDetallesEntrada(clave);
+                        detallesPorEntrada.put(clave, construirFilasDetalle(clave, det));
+                    } catch (Exception ignored) { }
                 }
                 return null;
             }
@@ -486,15 +486,11 @@ public class MainController {
     // =========================
     // Tabla / UI
     // =========================
-
     private void cargarImagenesFlecha() {
         try {
             flechaDerechaImage = new Image(getClass().getResourceAsStream("/img/flecha-derecha.png"));
             flechaAbajoImage = new Image(getClass().getResourceAsStream("/img/flecha-abajo.png"));
-
-            if (flechaAbajoImage.isError()) {
-                flechaAbajoImage = flechaDerechaImage;
-            }
+            if (flechaAbajoImage.isError()) flechaAbajoImage = flechaDerechaImage;
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -507,20 +503,14 @@ public class MainController {
 
         colSelect.setCellValueFactory(param -> {
             traspasoEntrada item = param.getValue();
-            if (item != null && !esFilaDetalle(item) && !esEncabezadoDetalle(item) && !esFilaCargando(item)) {
-                return item.seleccionadoProperty();
-            }
-            return new SimpleBooleanProperty(false);
+            return (item != null && isNormalRow(item)) ? item.seleccionadoProperty() : new SimpleBooleanProperty(false);
         });
 
-        colSelect.setCellFactory(param -> new CheckBoxTableCell<>() {
-            @Override
-            public void updateItem(Boolean item, boolean empty) {
+        colSelect.setCellFactory(param -> new CheckBoxTableCell<traspasoEntrada, Boolean>() {
+            @Override public void updateItem(Boolean item, boolean empty) {
                 super.updateItem(item, empty);
-                traspasoEntrada rowData = getTableRow() != null ? getTableRow().getItem() : null;
-                if (rowData != null && (esFilaDetalle(rowData) || esEncabezadoDetalle(rowData) || esFilaCargando(rowData))) {
-                    setGraphic(null);
-                }
+                traspasoEntrada rowData = getTableRow() == null ? null : getTableRow().getItem();
+                if (rowData != null && !isNormalRow(rowData)) setGraphic(null);
             }
         });
 
@@ -533,65 +523,45 @@ public class MainController {
         contenidoTabla.setEditable(true);
         contenidoTabla.setItems(entradasTraspaso);
 
-        TableColumn<traspasoEntrada, ?>[] columnas = new TableColumn[]{
-                colDesplegar, colSelect, colClaveEntrada, colFecha, colHora, colTotal, colNombreSucural
-        };
-        for (TableColumn<traspasoEntrada, ?> col : columnas) {
-            col.setStyle("-fx-alignment: CENTER;");
+        for (TableColumn<traspasoEntrada, ?> c : new TableColumn[]{ colDesplegar, colSelect, colClaveEntrada, colFecha, colHora, colTotal, colNombreSucural }) {
+            c.setStyle(STYLE_CENTER);
         }
 
         miCheckBox.selectedProperty().addListener((obs, oldVal, newVal) -> {
-            for (traspasoEntrada entrada : entradasTraspaso) {
-                if (!esFilaDetalle(entrada) && !esEncabezadoDetalle(entrada) && !esFilaCargando(entrada)) {
-                    entrada.setSeleccionado(newVal);
-                }
-            }
+            for (traspasoEntrada e : entradasTraspaso) if (e != null && isNormalRow(e)) e.setSeleccionado(newVal);
         });
 
         configurarCellFactories();
     }
 
     private void configurarColumnaFlecha() {
-        colDesplegar.setCellFactory(param -> new TableCell<>() {
-            private final ImageView imageView = new ImageView();
-            private final Button button = new Button();
+        colDesplegar.setCellFactory(param -> new TableCell<traspasoEntrada, Void>() {
+            private final ImageView iv = new ImageView();
+            private final Button btn = new Button();
 
             {
-                imageView.setFitHeight(20);
-                imageView.setFitWidth(20);
-                imageView.setPreserveRatio(true);
+                iv.setFitHeight(20);
+                iv.setFitWidth(20);
+                iv.setPreserveRatio(true);
 
-                button.setGraphic(imageView);
-                button.setStyle("-fx-background-color: transparent; -fx-padding: 0;");
-                button.setOnAction(event -> {
-                    traspasoEntrada item = getTableRow().getItem();
-                    if (item != null && !esFilaDetalle(item) && !esEncabezadoDetalle(item) && !esFilaCargando(item)) {
-                        toggleFilaDesplegada(item.getClaveEntrada());
-                    }
+                btn.setGraphic(iv);
+                btn.setStyle("-fx-background-color: transparent; -fx-padding: 0;");
+                btn.setOnAction(e -> {
+                    traspasoEntrada item = getTableRow() == null ? null : getTableRow().getItem();
+                    if (item != null && isNormalRow(item)) toggleFilaDesplegada(item.getClaveEntrada());
                 });
                 setAlignment(Pos.CENTER);
             }
 
-            @Override
-            protected void updateItem(Void item, boolean empty) {
+            @Override protected void updateItem(Void item, boolean empty) {
                 super.updateItem(item, empty);
 
-                if (empty || getTableRow().getItem() == null) {
-                    setGraphic(null);
-                    return;
-                }
+                traspasoEntrada row = (empty || getTableRow() == null) ? null : getTableRow().getItem();
+                if (row == null || !isNormalRow(row)) { setGraphic(null); return; }
 
-                traspasoEntrada rowItem = getTableRow().getItem();
-
-                if (esFilaDetalle(rowItem) || esEncabezadoDetalle(rowItem) || esFilaCargando(rowItem)) {
-                    setGraphic(null);
-                    return;
-                }
-
-                String clave = rowItem.getClaveEntrada();
-                boolean desplegada = filasDesplegadas.getOrDefault(clave, false);
-                imageView.setImage(desplegada ? flechaAbajoImage : flechaDerechaImage);
-                setGraphic(button);
+                boolean desplegada = filasDesplegadas.getOrDefault(row.getClaveEntrada(), false);
+                iv.setImage(desplegada ? flechaAbajoImage : flechaDerechaImage);
+                setGraphic(btn);
             }
         });
 
@@ -600,261 +570,133 @@ public class MainController {
         colDesplegar.setSortable(false);
     }
 
-    private boolean esFilaDetalle(traspasoEntrada entrada) {
-        return entrada.getClaveEntrada() != null && entrada.getClaveEntrada().contains("_DETALLE_");
-    }
-
-    private boolean esEncabezadoDetalle(traspasoEntrada entrada) {
-        return entrada.getClaveEntrada() != null && entrada.getClaveEntrada().contains("_ENCABEZADO_");
-    }
-
-    private boolean esFilaCargando(traspasoEntrada entrada) {
-        return entrada.getClaveEntrada() != null && entrada.getClaveEntrada().contains("_CARGANDO_");
-    }
-
-    private void configurarCellFactories() {
-        String colorBorde = "#4A4848";
-
-        // Columna "Id" (en detalle muestra ID del producto SIN loops pesados)
-        colClaveEntrada.setCellFactory(column -> new TableCell<>() {
-            @Override
-            protected void updateItem(String item, boolean empty) {
+    private void setBaseCell(TableColumn<traspasoEntrada, String> col,
+                             final String headerText,
+                             final String loadingText,
+                             final String borderStyle,
+                             final BiFunction<traspasoEntrada, String, String> detalleTextFn) {
+        col.setCellFactory(c -> new TableCell<traspasoEntrada, String>() {
+            @Override protected void updateItem(String item, boolean empty) {
                 super.updateItem(item, empty);
 
-                if (empty || getTableRow() == null || getTableRow().getItem() == null) {
-                    setText(null);
-                    setStyle("");
+                traspasoEntrada row = (empty || getTableRow() == null) ? null : getTableRow().getItem();
+                if (row == null) { setText(null); setStyle(""); return; }
+
+                RowKind k = kind(row);
+
+                if (k == RowKind.CARGANDO) {
+                    setText(loadingText);
+                    setStyle(loadingText == null || loadingText.isEmpty()
+                            ? STYLE_CENTER
+                            : (STYLE_CENTER + " -fx-font-style: italic;"));
                     return;
                 }
 
-                traspasoEntrada rowData = getTableRow().getItem();
-
-                if (esFilaCargando(rowData)) {
-                    setText("");
-                    setStyle("-fx-alignment: CENTER;");
+                if (k == RowKind.HEADER) {
+                    setText(headerText);
+                    setStyle(STYLE_HEADER);
                     return;
                 }
 
-                if (esEncabezadoDetalle(rowData)) {
-                    setText("Id");
-                    setStyle("-fx-background-color: #6A6767; -fx-text-fill: white; -fx-alignment: CENTER; -fx-font-weight: bold;");
-                    return;
-                }
-
-                if (esFilaDetalle(rowData)) {
-                    // Aquí el ID real está en rowData.getFecha()
-                    setText(rowData.getFecha());
-                    setStyle("-fx-alignment: CENTER; -fx-border-color: " + colorBorde + "; -fx-border-width: 0 1 1 1;");
+                if (k == RowKind.DETALLE) {
+                    setText(detalleTextFn.apply(row, item));
+                    setStyle(STYLE_CENTER + " " + borderStyle);
                     return;
                 }
 
                 setText(item);
-                setStyle("-fx-alignment: CENTER;");
+                setStyle(STYLE_CENTER);
             }
         });
+    }
 
-        // Columna "Producto" (carga nombre con cache + hilo, sin congelar UI)
-        colFecha.setCellFactory(column -> new TableCell<>() {
-            @Override
-            protected void updateItem(String item, boolean empty) {
+    private void configurarCellFactories() {
+        final String bordeId      = "-fx-border-color: " + BORDE_COLOR + "; -fx-border-width: 0 1 1 1;";
+        final String bordeDetalle = "-fx-border-color: " + BORDE_COLOR + "; -fx-border-width: 0 1 1 0;";
+
+        // "Id" -> en detalle muestra row.getFecha() (ID del producto)
+        setBaseCell(colClaveEntrada, "Id", "", bordeId, (row, item) -> s(row.getFecha()));
+
+        // "Producto" -> cache + hilo
+        colFecha.setCellFactory(c -> new TableCell<traspasoEntrada, String>() {
+            @Override protected void updateItem(String item, boolean empty) {
                 super.updateItem(item, empty);
 
-                if (empty || getTableRow() == null || getTableRow().getItem() == null) {
-                    setText(null);
-                    setStyle("");
-                    return;
-                }
+                traspasoEntrada row = (empty || getTableRow() == null) ? null : getTableRow().getItem();
+                if (row == null) { setText(null); setStyle(""); return; }
 
-                traspasoEntrada rowData = getTableRow().getItem();
+                RowKind k = kind(row);
 
-                if (esFilaCargando(rowData)) {
+                if (k == RowKind.CARGANDO) {
                     setText("Cargando...");
-                    setStyle("-fx-alignment: CENTER; -fx-font-style: italic;");
+                    setStyle(STYLE_CENTER + " -fx-font-style: italic;");
                     return;
                 }
 
-                if (esEncabezadoDetalle(rowData)) {
+                if (k == RowKind.HEADER) {
                     setText("Producto");
-                    setStyle("-fx-background-color: #6A6767; -fx-text-fill: white; -fx-alignment: CENTER; -fx-font-weight: bold;");
+                    setStyle(STYLE_HEADER);
                     return;
                 }
 
-                if (esFilaDetalle(rowData)) {
-                    String idProducto = rowData.getFecha(); // aquí está el id
+                if (k == RowKind.DETALLE) {
+                    String idProducto = row.getFecha();
                     String nombre = nombreProductoCache.get(idProducto);
 
-                    if (nombre == null || nombre.isBlank()) {
+                    if (nombre == null || nombre.trim().isEmpty()) {
                         setText("...");
                         precargarNombreProducto(idProducto);
                     } else {
                         setText(nombre);
                     }
 
-                    setStyle("-fx-alignment: CENTER; -fx-border-color: " + colorBorde + "; -fx-border-width: 0 1 1 0;");
+                    setStyle(STYLE_CENTER + " " + bordeDetalle);
                     return;
                 }
 
                 setText(item);
-                setStyle("-fx-alignment: CENTER;");
+                setStyle(STYLE_CENTER);
             }
         });
 
-        // Cantidad
-        colHora.setCellFactory(column -> new TableCell<>() {
-            @Override
-            protected void updateItem(String item, boolean empty) {
-                super.updateItem(item, empty);
-
-                if (empty || getTableRow() == null || getTableRow().getItem() == null) {
-                    setText(null);
-                    setStyle("");
-                    return;
-                }
-
-                traspasoEntrada rowData = getTableRow().getItem();
-
-                if (esFilaCargando(rowData)) {
-                    setText("");
-                    setStyle("-fx-alignment: CENTER;");
-                    return;
-                }
-
-                if (esEncabezadoDetalle(rowData)) {
-                    setText("Cantidad");
-                    setStyle("-fx-background-color: #6A6767; -fx-text-fill: white; -fx-alignment: CENTER; -fx-font-weight: bold;");
-                    return;
-                }
-
-                if (esFilaDetalle(rowData)) {
-                    setText(item);
-                    setStyle("-fx-alignment: CENTER; -fx-border-color: " + colorBorde + "; -fx-border-width: 0 1 1 0;");
-                    return;
-                }
-
-                setText(item);
-                setStyle("-fx-alignment: CENTER;");
-            }
-        });
-
-        // Precio Unitario
-        colTotal.setCellFactory(column -> new TableCell<>() {
-            @Override
-            protected void updateItem(String item, boolean empty) {
-                super.updateItem(item, empty);
-
-                if (empty || getTableRow() == null || getTableRow().getItem() == null) {
-                    setText(null);
-                    setStyle("");
-                    return;
-                }
-
-                traspasoEntrada rowData = getTableRow().getItem();
-
-                if (esFilaCargando(rowData)) {
-                    setText("");
-                    setStyle("-fx-alignment: CENTER;");
-                    return;
-                }
-
-                if (esEncabezadoDetalle(rowData)) {
-                    setText("Precio Unitario");
-                    setStyle("-fx-background-color: #6A6767; -fx-text-fill: white; -fx-alignment: CENTER; -fx-font-weight: bold;");
-                    return;
-                }
-
-                if (esFilaDetalle(rowData)) {
-                    setText(item);
-                    setStyle("-fx-alignment: CENTER; -fx-border-color: " + colorBorde + "; -fx-border-width: 0 1 1 0;");
-                    return;
-                }
-
-                setText(item);
-                setStyle("-fx-alignment: CENTER;");
-            }
-        });
-
-        // Precio Total
-        colNombreSucural.setCellFactory(column -> new TableCell<>() {
-            @Override
-            protected void updateItem(String item, boolean empty) {
-                super.updateItem(item, empty);
-
-                if (empty || getTableRow() == null || getTableRow().getItem() == null) {
-                    setText(null);
-                    setStyle("");
-                    return;
-                }
-
-                traspasoEntrada rowData = getTableRow().getItem();
-
-                if (esFilaCargando(rowData)) {
-                    setText("");
-                    setStyle("-fx-alignment: CENTER;");
-                    return;
-                }
-
-                if (esEncabezadoDetalle(rowData)) {
-                    setText("Precio Total");
-                    setStyle("-fx-background-color: #6A6767; -fx-text-fill: white; -fx-alignment: CENTER; -fx-font-weight: bold;");
-                    return;
-                }
-
-                if (esFilaDetalle(rowData)) {
-                    setText(item);
-                    setStyle("-fx-alignment: CENTER; -fx-border-color: " + colorBorde + "; -fx-border-width: 0 1 1 0;");
-                    return;
-                }
-
-                setText(item);
-                setStyle("-fx-alignment: CENTER;");
-            }
-        });
+        // Cantidad / Precio Unitario / Precio Total -> en detalle el item ya es lo correcto
+        setBaseCell(colHora, "Cantidad", "", bordeDetalle, (row, item) -> s(item));
+        setBaseCell(colTotal, "Precio Unitario", "", bordeDetalle, (row, item) -> s(item));
+        setBaseCell(colNombreSucural, "Precio Total", "", bordeDetalle, (row, item) -> s(item));
     }
 
     // =========================
     // Ordenamiento
     // =========================
-
     private void aplicarOrdenamiento() {
-        List<traspasoEntrada> listaOrdenada = new ArrayList<>(entradasTraspasoOriginal);
+        List<traspasoEntrada> lista = new ArrayList<>(entradasTraspasoOriginal);
 
-        Comparator<traspasoEntrada> comparator;
-        Function<String, String> normalizar = valor -> valor == null ? "" : valor.toLowerCase();
-
-        switch (criterioOrden) {
-            case "fecha":
-                comparator = Comparator.comparing(item -> {
-                    String fecha = item.getFecha();
-                    return (fecha == null || fecha.isBlank()) ? "" : fecha;
-                });
-                break;
-            case "sucursal":
-                comparator = Comparator.comparing(item -> normalizar.apply(item.getNombreSucursal()));
-                break;
-            case "id":
-            default:
-                comparator = Comparator.comparing(item -> normalizar.apply(item.getClaveEntrada()));
-                break;
+        final Function<traspasoEntrada, String> keyExtractor;
+        if ("fecha".equals(criterioOrden)) {
+            keyExtractor = e -> s(e.getFecha());
+        } else if ("sucursal".equals(criterioOrden)) {
+            keyExtractor = e -> s(e.getNombreSucursal()).toLowerCase();
+        } else { // "id" default
+            keyExtractor = e -> s(e.getClaveEntrada()).toLowerCase();
         }
 
-        if ("desc".equalsIgnoreCase(direccionOrden)) comparator = comparator.reversed();
+        Comparator<traspasoEntrada> cmp = Comparator.comparing(keyExtractor);
+        if ("desc".equalsIgnoreCase(direccionOrden)) cmp = cmp.reversed();
 
-        listaOrdenada.sort(comparator);
-        actualizarTablaConOrdenamiento(listaOrdenada);
+        lista.sort(cmp);
+        actualizarTablaConOrdenamiento(lista);
     }
 
     private void actualizarTablaConOrdenamiento(List<traspasoEntrada> listaOrdenada) {
         entradasTraspaso.clear();
 
-        for (traspasoEntrada entrada : listaOrdenada) {
-            entradasTraspaso.add(entrada);
+        for (traspasoEntrada e : listaOrdenada) {
+            entradasTraspaso.add(e);
 
-            String clave = entrada.getClaveEntrada();
+            String clave = e.getClaveEntrada();
             if (filasDesplegadas.getOrDefault(clave, false)) {
-                List<traspasoEntrada> detalles = detallesPorEntrada.get(clave);
-                if (detalles != null && !detalles.isEmpty()) {
-                    entradasTraspaso.addAll(detalles);
-                }
+                List<traspasoEntrada> det = detallesPorEntrada.get(clave);
+                if (det != null && !det.isEmpty()) entradasTraspaso.addAll(det);
             }
         }
 
@@ -883,7 +725,6 @@ public class MainController {
     // =========================
     // Acciones aceptar / rechazar
     // =========================
-
     @FXML
     public void aplicarAccion() {
         String opcion = miComboBox.getValue();
@@ -904,85 +745,73 @@ public class MainController {
         confirmacion.setContentText("Se aplicarán cambios a las entradas seleccionadas.");
 
         confirmacion.showAndWait().ifPresent(response -> {
-            if (response == ButtonType.OK) {
-                procesarSeleccion(opcion, seleccionados);
-            }
+            if (response == ButtonType.OK) procesarSeleccion(opcion, seleccionados);
         });
     }
 
     private void procesarSeleccion(String opcion, List<traspasoEntrada> seleccionados) {
-        List<String> claves = new ArrayList<>();
-        for (traspasoEntrada entrada : seleccionados) claves.add(entrada.getClaveEntrada());
+        List<String> claves = new ArrayList<>(seleccionados.size());
+        for (traspasoEntrada e : seleccionados) claves.add(e.getClaveEntrada());
 
-        boolean rechazar = opcion.equalsIgnoreCase("Rechazar");
+        boolean rechazar = "Rechazar".equalsIgnoreCase(opcion);
         String nuevoEstadoEntrada = rechazar ? "rechazado" : "disponible";
         String nuevoEstadoArticulos = rechazar ? "rechazado" : "disponible";
 
         if (rechazar) {
-            Alert confirmacionRechazar = new Alert(Alert.AlertType.CONFIRMATION);
-            confirmacionRechazar.setTitle("Confirmar eliminación");
-            confirmacionRechazar.setHeaderText("¿Estás seguro de rechazar las entradas seleccionadas?");
-            confirmacionRechazar.setContentText("Se eliminarán " + seleccionados.size() + " entrada(s).\nEsta acción no se puede deshacer.");
+            Alert a = new Alert(Alert.AlertType.CONFIRMATION);
+            a.setTitle("Confirmar eliminación");
+            a.setHeaderText("¿Estás seguro de rechazar las entradas seleccionadas?");
+            a.setContentText("Se eliminarán " + seleccionados.size() + " entrada(s).\nEsta acción no se puede deshacer.");
 
-            ButtonType botonSi = new ButtonType("Sí, rechazar");
-            ButtonType botonCancelar = new ButtonType("Cancelar", ButtonBar.ButtonData.CANCEL_CLOSE);
-            confirmacionRechazar.getButtonTypes().setAll(botonSi, botonCancelar);
+            ButtonType si = new ButtonType("Sí, rechazar");
+            ButtonType cancelar = new ButtonType("Cancelar", ButtonBar.ButtonData.CANCEL_CLOSE);
+            a.getButtonTypes().setAll(si, cancelar);
 
-            confirmacionRechazar.showAndWait().ifPresent(response -> {
-                if (response == botonSi) {
-                    ejecutarActualizacionAsync(claves, nuevoEstadoEntrada, nuevoEstadoArticulos, seleccionados.size());
-                }
-            });
+            a.showAndWait().ifPresent(r -> { if (r == si) ejecutarActualizacionAsync(claves, nuevoEstadoEntrada, nuevoEstadoArticulos, seleccionados.size()); });
         } else {
             abrirFormularioUbicaciones(seleccionados, claves, nuevoEstadoEntrada, nuevoEstadoArticulos);
         }
     }
 
-    private void ejecutarActualizacionAsync(List<String> claves, String nuevoEstadoEntrada,
-                                            String nuevoEstadoArticulos, int cantidad) {
-
+    private void ejecutarActualizacionAsync(List<String> claves, String nuevoEstadoEntrada, String nuevoEstadoArticulos, int cantidad) {
         runAsync(
                 () -> modeloTraspaso.actualizarEstadoEntradas(claves, nuevoEstadoEntrada, nuevoEstadoArticulos),
                 actualizado -> {
-                    if (actualizado) {
-                        entradasTraspasoOriginal.removeIf(e -> claves.contains(e.getClaveEntrada()));
-                        actualizarTablaConOrdenamiento(new ArrayList<>(entradasTraspasoOriginal));
-                        miCheckBox.setSelected(false);
-
-                        String mensajeExito = nuevoEstadoEntrada.equals("rechazado")
-                                ? "Se eliminaron " + cantidad + " entrada(s) correctamente."
-                                : "Se aceptaron " + cantidad + " entrada(s) correctamente.";
-
-                        mostrarAlerta(Alert.AlertType.INFORMATION, "Operación exitosa", mensajeExito);
-                    } else {
+                    if (!Boolean.TRUE.equals(actualizado)) {
                         mostrarAlerta(Alert.AlertType.ERROR, "Error", "No se pudieron actualizar las entradas.");
+                        return;
                     }
+
+                    entradasTraspasoOriginal.removeIf(e -> claves.contains(e.getClaveEntrada()));
+                    actualizarTablaConOrdenamiento(new ArrayList<>(entradasTraspasoOriginal));
+                    miCheckBox.setSelected(false);
+
+                    String msg = "rechazado".equals(nuevoEstadoEntrada)
+                            ? "Se eliminaron " + cantidad + " entrada(s) correctamente."
+                            : "Se aceptaron " + cantidad + " entrada(s) correctamente.";
+
+                    mostrarAlerta(Alert.AlertType.INFORMATION, "Operación exitosa", msg);
                 },
                 ex -> mostrarAlerta(Alert.AlertType.ERROR, "Error", "Fallo actualizando: " + ex.getMessage())
         );
     }
 
     private List<traspasoEntrada> obtenerSeleccionados() {
-        List<traspasoEntrada> seleccionados = new ArrayList<>();
-        for (traspasoEntrada entrada : entradasTraspaso) {
-            if (entrada.isSeleccionado() && !esFilaDetalle(entrada) && !esEncabezadoDetalle(entrada) && !esFilaCargando(entrada)) {
-                seleccionados.add(entrada);
-            }
-        }
-        return seleccionados;
+        List<traspasoEntrada> out = new ArrayList<>();
+        for (traspasoEntrada e : entradasTraspaso) if (e != null && isNormalRow(e) && e.isSeleccionado()) out.add(e);
+        return out;
     }
 
     // =========================
-    // Formulario ubicaciones (igual que tenías)
+    // Formulario ubicaciones
     // =========================
-
     private void abrirFormularioUbicaciones(List<traspasoEntrada> seleccionados,
                                             List<String> claves,
                                             String nuevoEstadoEntrada,
                                             String nuevoEstadoArticulos) {
 
-        List<traspasoEntrada> pendientes = new ArrayList<>(seleccionados);
-        procesarSiguienteUbicacion(pendientes, claves, nuevoEstadoEntrada, nuevoEstadoArticulos);
+        clavesEnProceso = (claves == null) ? Collections.emptyList() : new ArrayList<>(claves);
+        procesarSiguienteUbicacion(new ArrayList<>(seleccionados), clavesEnProceso, nuevoEstadoEntrada, nuevoEstadoArticulos);
     }
 
     private void procesarSiguienteUbicacion(List<traspasoEntrada> pendientes,
@@ -990,11 +819,10 @@ public class MainController {
                                             String nuevoEstadoEntrada,
                                             String nuevoEstadoArticulos) {
 
-        if (pendientes.isEmpty()) {
+        if (pendientes == null || pendientes.isEmpty()) {
             Platform.runLater(() -> {
-                mostrarAlerta(Alert.AlertType.INFORMATION, "Proceso completado",
-                        "Se han procesado todos los traspasos seleccionados.");
-                cargarTabla();
+                mostrarAlerta(Alert.AlertType.INFORMATION, "Proceso completado", "Se han procesado todos los traspasos seleccionados.");
+                cargarTablaAsincrona();
             });
             return;
         }
@@ -1004,21 +832,25 @@ public class MainController {
 
         try {
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/Formularios/view/ubicacionTraspaso.fxml"));
-            Parent root = loader.load();
+            Parent viewRoot = loader.load();
 
             ControllerUbicacionTraspaso controller = loader.getController();
             controller.setClaveEntrada(claveEntrada);
 
-            controller.setOnConfirmCallback(ubicacionesPorProducto -> {
-                actualizarEntradaIndividual(claveEntrada, nuevoEstadoEntrada, nuevoEstadoArticulos, pendientes, ubicacionesPorProducto);
-            });
+            controller.setOnConfirmCallback(ubicacionesPorProducto ->
+                    actualizarEntradaIndividual(claveEntrada, nuevoEstadoEntrada, nuevoEstadoArticulos, pendientes, ubicacionesPorProducto)
+            );
 
             Stage stage = new Stage();
             controller.setStage(stage);
 
-            Scene scene = new Scene(root, 500, 700);
+            Scene scene = new Scene(viewRoot, 500, 700);
             stage.setScene(scene);
-            stage.setTitle("Ubicaciones - " + claveEntrada + " (" + (claves.size() - pendientes.size()) + "/" + claves.size() + ")");
+
+            int total = claves == null ? 0 : claves.size();
+            int procesados = total - pendientes.size();
+            stage.setTitle("Ubicaciones - " + claveEntrada + " (" + procesados + "/" + total + ")");
+
             stage.initModality(Modality.WINDOW_MODAL);
             stage.initOwner(contenidoTabla.getScene().getWindow());
             stage.setResizable(false);
@@ -1031,23 +863,23 @@ public class MainController {
                     estadoArticulosEnEspera = nuevoEstadoArticulos;
                     return;
                 }
+
                 if (!pendientes.isEmpty()) {
                     PauseTransition pause = new PauseTransition(Duration.millis(300));
                     pause.setOnFinished(ev -> procesarSiguienteUbicacion(pendientes, claves, nuevoEstadoEntrada, nuevoEstadoArticulos));
                     pause.play();
                 } else {
-                    cargarTabla();
+                    cargarTablaAsincrona();
                 }
             });
 
             stage.show();
 
         } catch (Exception e) {
-            mostrarAlerta(Alert.AlertType.ERROR, "Error",
-                    "No se pudo abrir el formulario de ubicaciones para: " + claveEntrada);
+            mostrarAlerta(Alert.AlertType.ERROR, "Error", "No se pudo abrir el formulario de ubicaciones para: " + claveEntrada);
             e.printStackTrace();
 
-            if (!pendientes.isEmpty()) {
+            if (pendientes != null && !pendientes.isEmpty()) {
                 PauseTransition pause = new PauseTransition(Duration.millis(300));
                 pause.setOnFinished(ev -> procesarSiguienteUbicacion(pendientes, claves, nuevoEstadoEntrada, nuevoEstadoArticulos));
                 pause.play();
@@ -1063,6 +895,7 @@ public class MainController {
 
         actualizandoEntrada = true;
         overlayCarga.mostrar();
+
         runAsync(
                 () -> {
                     model.ResultadoOperacion resultado = modeloTraspaso.actualizarUbicacionesYEstados(
@@ -1072,10 +905,10 @@ public class MainController {
                             nuevoEstadoArticulos
                     );
 
-                    List<model.DetalleEntrada> detalles = null;
-                    if (resultado.isExito()) {
-                        detalles = modeloTraspaso.obtenerDetallesEntrada(claveEntrada);
-                    }
+                    List<model.DetalleEntrada> detalles = resultado.isExito()
+                            ? modeloTraspaso.obtenerDetallesEntrada(claveEntrada)
+                            : null;
+
                     return new Object[]{resultado, detalles};
                 },
                 payload -> {
@@ -1083,30 +916,24 @@ public class MainController {
                     @SuppressWarnings("unchecked")
                     List<model.DetalleEntrada> detalles = (List<model.DetalleEntrada>) payload[1];
 
+                    overlayCarga.ocultar();
+
                     if (resultado.isExito()) {
-                        overlayCarga.ocultar();
-                        entradasTraspasoOriginal.removeIf(e -> e.getClaveEntrada().equals(claveEntrada));
+                        entradasTraspasoOriginal.removeIf(e -> claveEntrada.equals(e.getClaveEntrada()));
                         actualizarTablaConOrdenamiento(new ArrayList<>(entradasTraspasoOriginal));
-
                         mostrarConfirmacionReporte(claveEntrada, resultado.getMensaje(), detalles, ubicacionesPorProducto);
-
-                        actualizandoEntrada = false;
-                        continuarPendientes(pendientes, nuevoEstadoEntrada, nuevoEstadoArticulos);
                     } else {
-                        overlayCarga.ocultar();
-                        mostrarAlerta(Alert.AlertType.ERROR, "Error",
-                                "No se pudo actualizar el traspaso: " + resultado.getMensaje());
-
-                        actualizandoEntrada = false;
-                        continuarPendientes(pendientes, nuevoEstadoEntrada, nuevoEstadoArticulos);
+                        mostrarAlerta(Alert.AlertType.ERROR, "Error", "No se pudo actualizar el traspaso: " + resultado.getMensaje());
                     }
+
+                    actualizandoEntrada = false;
+                    continuarPendientes(pendientes, nuevoEstadoEntrada, nuevoEstadoArticulos);
                 },
                 ex -> {
                     overlayCarga.ocultar();
                     actualizandoEntrada = false;
                     continuarPendientes(pendientes, nuevoEstadoEntrada, nuevoEstadoArticulos);
-                    mostrarAlerta(Alert.AlertType.ERROR, "Error",
-                            "Fallo actualizando traspaso: " + ex.getMessage());
+                    mostrarAlerta(Alert.AlertType.ERROR, "Error", "Fallo actualizando traspaso: " + ex.getMessage());
                 }
         );
     }
@@ -1122,6 +949,7 @@ public class MainController {
         dialogo.setTitle("Registro exitoso");
         dialogo.setHeaderText(mensaje);
         dialogo.setContentText("¿Deseas descargar el reporte de este traspaso?");
+
         ButtonType btnDescargar = new ButtonType("Descargar");
         ButtonType btnAhoraNo = new ButtonType("Ahora no", ButtonBar.ButtonData.CANCEL_CLOSE);
         dialogo.getButtonTypes().setAll(btnDescargar, btnAhoraNo);
@@ -1139,6 +967,31 @@ public class MainController {
         });
     }
 
+    private void continuarPendientes(List<traspasoEntrada> pendientes,
+                                     String nuevoEstadoEntrada,
+                                     String nuevoEstadoArticulos) {
+
+        List<traspasoEntrada> pendientesFinal = (pendientesEnEspera != null) ? pendientesEnEspera : pendientes;
+        String estadoEntradaFinal = (pendientesEnEspera != null) ? estadoEntradaEnEspera : nuevoEstadoEntrada;
+        String estadoArticulosFinal = (pendientesEnEspera != null) ? estadoArticulosEnEspera : nuevoEstadoArticulos;
+
+        pendientesEnEspera = null;
+        estadoEntradaEnEspera = null;
+        estadoArticulosEnEspera = null;
+
+        if (pendientesFinal != null && !pendientesFinal.isEmpty()) {
+            PauseTransition pause = new PauseTransition(Duration.millis(500));
+            List<traspasoEntrada> copia = new ArrayList<>(pendientesFinal);
+            pause.setOnFinished(e -> procesarSiguienteUbicacion(copia, clavesEnProceso, estadoEntradaFinal, estadoArticulosFinal));
+            pause.play();
+        } else {
+            cargarTablaAsincrona();
+        }
+    }
+
+    // =========================
+    // Utilidades
+    // =========================
     private void mostrarAlerta(Alert.AlertType tipo, String titulo, String mensaje) {
         Alert alerta = new Alert(tipo);
         alerta.setTitle(titulo);
@@ -1146,36 +999,4 @@ public class MainController {
         alerta.setContentText(mensaje);
         alerta.showAndWait();
     }
-
-    private void continuarPendientes(List<traspasoEntrada> pendientes,
-                                     String nuevoEstadoEntrada,
-                                     String nuevoEstadoArticulos) {
-        List<traspasoEntrada> pendientesFinal = pendientes;
-        String estadoEntradaFinal = nuevoEstadoEntrada;
-        String estadoArticulosFinal = nuevoEstadoArticulos;
-
-        if (pendientesEnEspera != null) {
-            pendientesFinal = pendientesEnEspera;
-            estadoEntradaFinal = estadoEntradaEnEspera;
-            estadoArticulosFinal = estadoArticulosEnEspera;
-        }
-
-        pendientesEnEspera = null;
-        estadoEntradaEnEspera = null;
-        estadoArticulosEnEspera = null;
-
-        if (!pendientesFinal.isEmpty()) {
-            PauseTransition pause = new PauseTransition(Duration.millis(500));
-            List<traspasoEntrada> pendientesCopia = new ArrayList<>(pendientesFinal);
-            String estadoEntradaCopia = estadoEntradaFinal;
-            String estadoArticulosCopia = estadoArticulosFinal;
-            pause.setOnFinished(e -> procesarSiguienteUbicacion(
-                    pendientesCopia, new ArrayList<>(), estadoEntradaCopia, estadoArticulosCopia
-            ));
-            pause.play();
-        } else {
-            cargarTabla();
-        }
-    }
-
 }
